--- a/Challenge04LGBB/View/Base.lproj/ConfigScreen.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/ConfigScreen.storyboard
@@ -44,7 +44,7 @@
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <switch opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" contentHorizontalAlignment="center" contentVerticalAlignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="K6B-Tf-lhv">
-                                                        <rect key="frame" x="310" y="12" width="51" height="31"/>
+                                                        <rect key="frame" x="315" y="12" width="51" height="31"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="31" id="XpL-nG-4Uj"/>
                                                             <constraint firstAttribute="width" constant="49" id="aaE-Je-gyN"/>
@@ -61,7 +61,7 @@
                                                     <constraint firstItem="K6B-Tf-lhv" firstAttribute="centerY" secondItem="fMi-fN-Xh8" secondAttribute="centerY" id="4YJ-nc-tsc"/>
                                                     <constraint firstItem="fOS-jW-tIw" firstAttribute="leading" secondItem="fMi-fN-Xh8" secondAttribute="leading" constant="10" id="5Og-Ut-XaO"/>
                                                     <constraint firstItem="fOS-jW-tIw" firstAttribute="centerY" secondItem="fMi-fN-Xh8" secondAttribute="centerY" id="5uJ-tY-acm"/>
-                                                    <constraint firstAttribute="trailing" secondItem="K6B-Tf-lhv" secondAttribute="trailing" constant="15" id="F74-ZE-XgD"/>
+                                                    <constraint firstAttribute="trailing" secondItem="K6B-Tf-lhv" secondAttribute="trailing" constant="10" id="F74-ZE-XgD"/>
                                                     <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="374" id="Yar-xg-mdi"/>
                                                     <constraint firstAttribute="height" constant="55" id="vcO-ZP-r0g"/>
                                                 </constraints>
@@ -72,7 +72,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Pvq-dy-iuL">
-                                                <rect key="frame" x="34" y="110" width="340" height="65"/>
+                                                <rect key="frame" x="32" y="110" width="340" height="65"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="65" id="DT1-N7-nG4"/>
                                                     <constraint firstAttribute="width" constant="340" id="dVT-Pz-QVS"/>
@@ -82,7 +82,7 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="buq-ym-mST" userLabel="SoundView">
-                                                <rect key="frame" x="20" y="194" width="374" height="55"/>
+                                                <rect key="frame" x="20" y="190" width="374" height="55"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Efeitos Sonoros" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="AqQ-sd-6TU">
                                                         <rect key="frame" x="10" y="12" width="178" height="31"/>
@@ -121,7 +121,7 @@
                                                 </userDefinedRuntimeAttributes>
                                             </view>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Habilite ou Desabilite os efeitos sonoros." lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="je1-Ts-nQu">
-                                                <rect key="frame" x="32" y="257" width="340" height="43"/>
+                                                <rect key="frame" x="32" y="255" width="340" height="43"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="43" id="JUC-IJ-hQW"/>
                                                     <constraint firstAttribute="width" constant="340" id="xcW-RF-ava"/>
@@ -130,9 +130,9 @@
                                                 <nil key="highlightedColor"/>
                                             </label>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sod-yR-GxB" userLabel="HapticView">
-                                                <rect key="frame" x="20" y="315" width="374" height="55"/>
+                                                <rect key="frame" x="20" y="313" width="374" height="55"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Háptica" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c2e-Ll-UvA">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feedback Háptico" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c2e-Ll-UvA">
                                                         <rect key="frame" x="10" y="12" width="178" height="31"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="178" id="Htv-N4-yzf"/>
@@ -168,33 +168,36 @@
                                                     </userDefinedRuntimeAttribute>
                                                 </userDefinedRuntimeAttributes>
                                             </view>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Habilite ou Desabilite o efeito háptico ao apertar os botões." lineBreakMode="tailTruncation" numberOfLines="3" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XQG-ba-nCs">
-                                                <rect key="frame" x="32" y="391" width="340" height="43"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Habilite ou Desabilite o feedback háptico ao apertar os botões." textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r6g-I7-2R1">
+                                                <rect key="frame" x="32" y="378" width="340" height="43"/>
                                                 <constraints>
-                                                    <constraint firstAttribute="height" constant="43" id="UR0-zS-pVI"/>
-                                                    <constraint firstAttribute="width" constant="340" id="flK-p3-40w"/>
+                                                    <constraint firstAttribute="height" constant="43" id="WYK-a2-Ejm"/>
+                                                    <constraint firstAttribute="width" constant="340" id="ayC-hp-b6s"/>
                                                 </constraints>
                                                 <fontDescription key="fontDescription" name="Baloo2-Regular" family="Baloo 2" pointSize="13"/>
+                                                <nil key="textColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
                                         </subviews>
                                         <color key="backgroundColor" name="CorDaview"/>
                                         <constraints>
-                                            <constraint firstAttribute="trailing" secondItem="Pvq-dy-iuL" secondAttribute="trailing" constant="40" id="3wB-Zh-8hW"/>
+                                            <constraint firstItem="r6g-I7-2R1" firstAttribute="top" secondItem="Sod-yR-GxB" secondAttribute="bottom" constant="10" id="38x-bk-KwY"/>
                                             <constraint firstAttribute="trailing" secondItem="fMi-fN-Xh8" secondAttribute="trailing" constant="20" id="4hl-yY-Jnp"/>
+                                            <constraint firstAttribute="trailing" secondItem="Pvq-dy-iuL" secondAttribute="trailing" constant="42" id="9n4-PM-NaQ"/>
                                             <constraint firstAttribute="height" constant="500" id="BUS-oR-EGx"/>
                                             <constraint firstItem="fMi-fN-Xh8" firstAttribute="leading" secondItem="buq-ym-mST" secondAttribute="leading" id="Cqp-zy-5sF"/>
                                             <constraint firstItem="je1-Ts-nQu" firstAttribute="leading" secondItem="ZXm-SK-Dmr" secondAttribute="leading" constant="32" id="EKr-RK-0v4"/>
-                                            <constraint firstItem="je1-Ts-nQu" firstAttribute="top" secondItem="buq-ym-mST" secondAttribute="bottom" constant="8" symbolic="YES" id="Gb8-Nq-Bad"/>
+                                            <constraint firstAttribute="trailing" secondItem="r6g-I7-2R1" secondAttribute="trailing" constant="42" id="EbY-e1-f5j"/>
+                                            <constraint firstItem="je1-Ts-nQu" firstAttribute="top" secondItem="buq-ym-mST" secondAttribute="bottom" constant="10" id="Gb8-Nq-Bad"/>
                                             <constraint firstItem="fMi-fN-Xh8" firstAttribute="centerX" secondItem="ZXm-SK-Dmr" secondAttribute="centerX" id="J2r-o6-JlX"/>
                                             <constraint firstItem="Sod-yR-GxB" firstAttribute="leading" secondItem="buq-ym-mST" secondAttribute="leading" id="LB8-85-vT5"/>
-                                            <constraint firstItem="Pvq-dy-iuL" firstAttribute="leading" secondItem="ZXm-SK-Dmr" secondAttribute="leading" constant="34" id="LLm-qQ-hGQ"/>
-                                            <constraint firstItem="XQG-ba-nCs" firstAttribute="leading" secondItem="je1-Ts-nQu" secondAttribute="leading" id="QHp-hi-eTm"/>
+                                            <constraint firstItem="Pvq-dy-iuL" firstAttribute="leading" secondItem="ZXm-SK-Dmr" secondAttribute="leading" constant="32" id="LLm-qQ-hGQ"/>
+                                            <constraint firstItem="r6g-I7-2R1" firstAttribute="leading" secondItem="ZXm-SK-Dmr" secondAttribute="leading" constant="32" id="PLU-4N-sTp"/>
                                             <constraint firstItem="Pvq-dy-iuL" firstAttribute="top" secondItem="fMi-fN-Xh8" secondAttribute="bottom" constant="10" id="YQq-DA-x0l"/>
-                                            <constraint firstItem="buq-ym-mST" firstAttribute="top" secondItem="Pvq-dy-iuL" secondAttribute="bottom" constant="19" id="YWs-0B-iCu"/>
+                                            <constraint firstItem="buq-ym-mST" firstAttribute="top" secondItem="Pvq-dy-iuL" secondAttribute="bottom" constant="15" id="YWs-0B-iCu"/>
                                             <constraint firstItem="Sod-yR-GxB" firstAttribute="trailing" secondItem="buq-ym-mST" secondAttribute="trailing" id="aQI-Nx-FfV"/>
-                                            <constraint firstItem="XQG-ba-nCs" firstAttribute="top" secondItem="Sod-yR-GxB" secondAttribute="bottom" constant="21" id="ccM-8A-asB"/>
                                             <constraint firstItem="fMi-fN-Xh8" firstAttribute="trailing" secondItem="buq-ym-mST" secondAttribute="trailing" id="pNs-O5-QKY"/>
+                                            <constraint firstAttribute="trailing" secondItem="je1-Ts-nQu" secondAttribute="trailing" constant="42" id="uja-Ne-LiU"/>
                                             <constraint firstItem="Sod-yR-GxB" firstAttribute="top" secondItem="je1-Ts-nQu" secondAttribute="bottom" constant="15" id="xdS-Vo-ZQz"/>
                                             <constraint firstItem="fMi-fN-Xh8" firstAttribute="leading" secondItem="ZXm-SK-Dmr" secondAttribute="leading" constant="20" id="xyD-Mb-X5K"/>
                                             <constraint firstItem="fMi-fN-Xh8" firstAttribute="top" secondItem="ZXm-SK-Dmr" secondAttribute="top" constant="45" id="yrI-1C-Xuj"/>
