fix: haptic name

--- a/Challenge04LGBB/View/Base.lproj/ConfigScreen.storyboard
+++ b/Challenge04LGBB/View/Base.lproj/ConfigScreen.storyboard
@@ -132,7 +132,7 @@
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Sod-yR-GxB" userLabel="HapticView">
                                                 <rect key="frame" x="20" y="313" width="374" height="55"/>
                                                 <subviews>
-                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Feedback Háptico" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c2e-Ll-UvA">
+                                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Háptica" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="c2e-Ll-UvA">
                                                         <rect key="frame" x="10" y="12" width="178" height="31"/>
                                                         <constraints>
                                                             <constraint firstAttribute="width" constant="178" id="Htv-N4-yzf"/>
